Fixed bugs - Fixed bug with deleting the whole books section - Add word wrap - Padding on the bottom

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2 {
 #main-section {
     display: grid;
     gap: var(--books-gap);
-    padding-top: var(--books-gap);
+    padding: var(--books-gap) 0;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     align-items: stretch;
 }
@@ -174,4 +174,7 @@ input[type="text"], input[type="number"] {
     border: var(--lines);
     border-radius: 8px;
     padding-left: 4px;
+}
+.book * {
+    word-wrap: break-word;
 }
